--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <button class="btn-primary">Explore More</button>
     </div>
     </section>
-    <!-- features will enjoy -->
+    <!-- some facts -->
     <section>
         <h3 class="section-title">Some Facts</h3>
         <p class="text-light-color fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -81,7 +81,23 @@
         </div>
 
     </section>
-    <!-- some facts -->
+    <!-- our sponsors -->
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+
+            </div>
+
+        </section>
     </main>
     <footer>
 
